manifests/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-service
  template:
    metadata:
      labels:
        app: store-service
    spec:
      containers:
        - name: chat-service
          image: johnoguma/store-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-service
spec:
  selector:
    app: store-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 31235  # You can change this port if needed (30000–32767)
  type: NodePort
---
