manifests/kyc-chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc-chatbot
  template:
    metadata:
      labels:
        app: kyc-chatbot
    spec:
      containers:
        - name: kyc-chatbot
          image: johnoguma/kyc-chatbot:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kyc-chatbot
spec:
  selector:
    app: kyc-chatbot
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # You can change this port if needed (30000–32767)
  type: NodePort
