manifests/kyc-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app:  store-kyc
spec: 
  replicas: 1
  selector:
    matchLabels:
      app:  store-kyc
  template:
    metadata:
      labels:
        app:  store-kyc
    spec:
      containers:
        - name: frontend
          image: johnoguma/store-kyc:latest
          ports:
            - containerPort: 80
            
---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: store-kyc
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-internal
spec:
  type: ClusterIP
  selector:
    app: store-kyc
  ports:
  - protocol: TCP
    port: 80
