manifests/kyc-nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-service
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 31081  # Must be between 30000 and 32767
